[build-system]
requires = ["cmake", "setuptools>=64", "packaging>=20.0", "typing_extensions", "wheel", "setuptools-scm"]
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "pyfes"
description = "Tidal constituents analysis in Python"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "CNES/CLS/LEGOS", email = "fbriol@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "netCDF4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/CNES/pangeo-pyfes"

[project.scripts]
fes_convert_mesh = "pyfes.console_scripts.fes_convert_mesh:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = {where = ["src/python"]}

[tool.setuptools.package-dir]
"" = "src/python"

[tool.setuptools.package-data]
pyfes = [
    "py.typed",
    "core/*.pyi",
    "tests/dataset/*.nc",
    "data/leap-seconds.txt",
]
"*" = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py312"
line-length = 80
exclude = ["*.pyi", "docs", "docs/**"]

[tool.ruff.lint.pycodestyle]
max-line-length = 80

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = [
  "ANN",    # flake8-annotations
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "C4",     # comprehensions
  "C90",    # mccabe
  "D",      # docstring lints
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "INT",    # flake8-gettext
  "NPY002", # numpy-legacy-random
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # misc lints
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "TCH",    # type-checking imports
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,examples}/**" = ["D", "S", "ANN", "PLR"]

[tool.ruff.lint.isort]
force-to-top = ["typing", "collections.abc"]
lines-after-imports = 2
known-first-party = ["pyfes"]
split-on-trailing-comma = false
combine-as-imports = true
force-sort-within-sections = true


[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
